examples/datalog/11_types/26_large_integers.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_large_int
Knowledge graph 'test_large_int' created.
Switched to knowledge graph: test_large_int
> .kg use test_large_int
Switched to knowledge graph: test_large_int
> +big_nums[(1000000,), (999999999,), (123456789,)].
Inserted 3 fact(s) into 'big_nums'.
> ?- big_nums(N).
3 rows:
  (1000000)
  (123456789)
  (999999999)
> computed(N, R) :- big_nums(N), R = N + 1.
Script error: Query execution failed: Unsafe rule: Atom { relation: "computed", args: [Variable("N"), Variable("R")] }. Variables ["R"] in head do not appear in positive body atoms.
